# postgres

./: .gitlab-ci.yml  .gitpod.yml  0001-Fix-FK-fast-path-cache-loss-on-subtransaction-abort.patch  1.md  ADDITIONAL_WAIT_EVENT_GAPS.md  ANALYSIS_RELEVANT_COMMITS.md  BENCHMARK_ANALYSIS.md  BENCHMARK_RESULTS.md  BTREE_PG18_IMPROVEMENTS.md  BTREE_PG19_IMPROVEMENTS.md  COST_ESTIMATE.md  GSoC_Ideas_Refreshed.md  PERFORMANCE_VERDICT.txt  PG18_COMMIT_ANALYSIS.md  PGQ_PERF_IDEAS.md  QUERY_CANCELLATION_ISSUES.md  README.md  README_pg_restore_enhancement.md  REV-REVIEW.md  REVIEW.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REVIEW.md  TIMING_PATCH_README.md  WAIT_EVENTS_ANALYSIS.md  analyze_results.sql  christmas_tree.sql  configure.ac  cover_letter.txt  demo_enhanced_pg_restore.sh  email-draft-logging-waitevents.txt  fk_fastpath_bug_analysis.md  fk_fastpath_bug_repro.sql  implementation-plan-recovery-target-time-no-restart.md  merge_request_description.md  monitor_parallel_hang.sql  pg_restore_object_tracking.patch  run_reproduction_test.sh  test_compression_levels.sql  test_last_query_ms.sql  test_no_compression.sql  (+7 more)
REV/: CLAUDE.md
analysis/: .gitignore  bruce_by_category.csv  bruce_by_ext.csv  bruce_by_topdir.csv  generate_bruce_chart.py  generate_chart.py  (+3 more)
contrib/pg_query_json/: Makefile  meson.build  pg_query_json--1.0.sql  pg_query_json.c  pg_query_json.control
contrib/pg_query_json/expected/: pg_query_json.out
contrib/pg_query_json/sql/: pg_query_json.sql
src/test/modules/index/: Makefile  meson.build
src/test/modules/index/t/: 001_unlogged_lsn_stress.pl
(+316 files in other folders)
